--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
